After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 639845 - insensitive and separator items in comboboxes not working correctly
insensitive and separator items in comboboxes not working correctly
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkComboBox
2.99.x
Other Linux
: Normal major
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-01-18 14:09 UTC by Christian Persch
Modified: 2011-01-21 04:40 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Persch 2011-01-18 14:09:45 UTC
Steps to repro:
0) start gtk+/tests/testcombo. Focus now is on the first combo box.
1) press Down key once
2) press Down key 3 times

Results:
After 1), the combo box shows the "gtk-stock-stop" item, which is insensitive and thus shouldn't be selectable.
After 2), the combo box shows the "separator" item, which shouldn't be selectable either.